--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -54,6 +54,7 @@
     "no-console": ["warn", { "allow": ["warn", "error", "info"] }],
     "no-nested-ternary": [0, {}],
     "no-debugger": [0, {}],
+    "react/prop-types": 0,
     "@typescript-eslint/comma-dangle": [
       "error",
       {
