--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-window": "^1.8.6",
     "typescript": "4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "zustand": "^3.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-window": "^1.8.3",
     "eslint": "^7.28.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
