--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuzlocke",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.4",
@@ -12,7 +12,6 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-window": "^1.8.6",
-    "typescript": "4.1.2",
     "zustand": "^3.5.4"
   },
   "scripts": {
@@ -52,6 +51,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.3.1"
+    "prettier": "^2.3.1",
+    "typescript": "^4.0.8"
   }
 }
