--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-window": "^1.8.6",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "zustand": "^3.5.4"
   },
   "scripts": {
