Accesiblity fixes, updated packages, style fixes for dark mode, changes encounter table to encounter list, about section

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -65,6 +65,15 @@
         "exports": "only-multiline",
         "enums": "only-multiline"
       }
+    ],
+    "jsx-a11y/label-has-associated-control": [
+      0,
+      {
+        "labelComponents": ["label"],
+        "labelAttributes": ["label"],
+        "controlComponents": ["Dropdown"],
+        "depth": 3
+      }
     ]
   }
 }
