--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "nuzlocke",
-  "version": "2.0.1",
+  "author": "Diego Ballesteros Castellanos",
+  "version": "2.1.0",
+  "homepage": "https://github.com/diballesteros/nuzlocke/",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/diballesteros/nuzlocke/issues"
+  },
   "private": true,
   "dependencies": {
-    "immer": "^9.0.3",
+    "immer": "^9.0.5",
     "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -11,13 +17,15 @@
     "react-window": "^1.8.6",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
-    "zustand": "^3.5.4"
+    "zustand": "^3.5.7"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier --write src/**/*.ts{,x}",
+    "lint": "tsc --noEmit && eslint src/**/*.ts{,x} --ignore-pattern *.test.tsx"
   },
   "eslintConfig": {
     "extends": [
@@ -37,11 +45,13 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^15.12.5",
-    "@types/react": "^17.0.11",
-    "@types/react-dom": "^17.0.8",
-    "@types/react-window": "^1.8.3",
-    "eslint": "^7.28.0",
+    "@types/node": "^16.3.2",
+    "@types/react": "^17.0.14",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-window": "^1.8.4",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
+    "eslint": "^7.30.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.3.0",
@@ -50,7 +60,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.3.1",
-    "typescript": "^4.0.8"
+    "prettier": "^2.3.2",
+    "typescript": "4.0.8"
   }
 }
