--- a/package.json
+++ b/package.json
@@ -44,12 +44,13 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^16.4.0",
-    "@types/react": "^17.0.14",
+    "@types/node": "^16.4.2",
+    "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "@types/react-window": "^1.8.4",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
+    "cypress": "^8.0.0",
     "eslint": "^7.31.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
