--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,8 @@ jobs:
   cypress-run:  
     runs-on: ubuntu-16.04
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Cypress.io
         uses: cypress-io/github-action@v2.9.7
         with:
