--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Cypress
 on: [push]
 jobs:
   cypress-run:  
-    runs-on: ubuntu-16.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -10,7 +10,7 @@ jobs:
         uses: cypress-io/github-action@v2.9.7
         with:
           build: yarn run build
-          start: yarn start
+          start: yarn run develop:ci
           install-command: yarn
           record: true
           wait-on: http://localhost:3000
