--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.0",
     "react-scripts": "4.0.3",
     "react-window": "^1.8.6",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
+    "web-vitals": "^2.1.0",
     "zustand": "^3.5.7"
   },
   "scripts": {
