--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nuzlocke",
   "author": "Diego Ballesteros Castellanos",
-  "version": "2.6.2",
+  "version": "2.6.3",
   "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/diballesteros/nuzlocke/issues"
@@ -9,7 +9,6 @@
   "private": true,
   "dependencies": {
     "immer": "^9.0.5",
-    "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -19,6 +18,7 @@
     "zustand": "^3.5.7"
   },
   "scripts": {
+    "analyze": "source-map-explorer ''build/static/js/*.js'",
     "start": "react-scripts start",
     "develop:ci": "CHOKIDAR_USEPOLLING=1 yarn start",
     "build": "react-scripts build",
@@ -61,7 +61,9 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "node-sass": "4.14.1",
     "prettier": "^2.3.2",
+    "source-map-explorer": "^2.5.2",
     "typescript": "4.0.8"
   }
 }
