--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "nuzlocke",
   "author": "Diego Ballesteros Castellanos",
+  "description": "Nuzlocke tracker to record encounters with detailed information",
   "version": "3.1.0",
   "license": "BSD-3-Clause",
   "bugs": {
@@ -15,7 +16,7 @@
     "react-window": "^1.8.6",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
-    "zustand": "^3.5.8"
+    "zustand": "^3.5.9"
   },
   "scripts": {
     "analyze": "source-map-explorer ''build/static/js/*.js'",
@@ -46,13 +47,13 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.172",
-    "@types/node": "^16.6.1",
-    "@types/react": "^17.0.17",
+    "@types/node": "^16.6.2",
+    "@types/react": "^17.0.18",
     "@types/react-dom": "^17.0.9",
     "@types/react-window": "^1.8.5",
-    "@typescript-eslint/eslint-plugin": "^4.29.1",
-    "@typescript-eslint/parser": "^4.29.1",
-    "cypress": "^8.2.0",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
+    "cypress": "^8.3.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
