--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "private": true,
   "dependencies": {
+    "html-to-image": "^1.7.0",
     "immer": "^9.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -47,8 +48,8 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.172",
-    "@types/node": "^16.6.2",
-    "@types/react": "^17.0.18",
+    "@types/node": "^16.7.1",
+    "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "@types/react-window": "^1.8.5",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
@@ -58,9 +59,9 @@
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.24.0",
+    "eslint-plugin-import": "^2.24.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "node-sass": "4.14.1",
