--- a/public/manifest.json
+++ b/public/manifest.json
@@ -29,7 +29,7 @@
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#AE2A2F",
-  "primary": "portrait-primary",
+  "orientation": "portrait-primary",
   "categories": ["entertainment", "productivity"],
   "iarc_rating_id": "0e709b1e-f322-4f7e-974d-0c965ce09b7b"
 }
