Test fixes for new revamped sections, new icons for PWA

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -23,6 +23,12 @@
       "type": "image/png",
       "sizes": "192x192",
       "purpose": "any maskable"
+    },
+    {
+      "src": "maskable_icon.png",
+      "type": "image/png",
+      "sizes": "192x192",
+      "purpose": "maskable"
     }
   ],
   "start_url": ".",
