--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -56,6 +56,7 @@
     "no-nested-ternary": [0, {}],
     "no-debugger": [0, {}],
     "react/prop-types": 0,
+    "react/require-default-props": 0,
     "@typescript-eslint/comma-dangle": [
       "error",
       {
