--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,6 +60,9 @@ jobs:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
+
   ui-firefox-tests:
     timeout-minutes: 15
     runs-on: ubuntu-latest
