Removed errory boundary from tests, test improvements, included error boundary for tracker

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
       "src/serviceWorker.ts",
       "src/serviceWorkerRegistration.ts",
       "src/components/UpdateSW/UpdateSW.tsx",
-      "src/index.tsx"
+      "src/index.tsx",
+      "src/error/ErrorBoundary.tsx"
     ]
   },
   "private": true,
