--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "httpss": "HTTPS=true react-scripts start",
     "develop:ci": "CHOKIDAR_USEPOLLING=1 react-scripts -r @cypress/instrument-cra start",
     "build": "react-scripts build",
+    "e2e": "cypress open",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier --write src/**/*.ts{,x}",
