--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nuzlocke",
   "author": "Diego Ballesteros Castellanos",
   "description": "Nuzlocke tracker to record encounters with detailed information",
-  "version": "3.8.0",
+  "version": "3.9.0",
   "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/diballesteros/nuzlocke/issues"
@@ -22,12 +22,13 @@
     "immer": "^9.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-papaparse": "^3.17.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.3",
     "react-window": "^1.8.6",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.3",
+    "semantic-ui-react": "^2.0.4",
     "zustand": "^3.5.10"
   },
   "scripts": {
@@ -67,14 +68,14 @@
     "@testing-library/react": "^12.1.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.2",
-    "@types/lodash": "^4.14.173",
-    "@types/node": "^16.9.2",
-    "@types/react": "^17.0.21",
+    "@types/lodash": "^4.14.174",
+    "@types/node": "^16.10.1",
+    "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.1.9",
+    "@types/react-router-dom": "^5.3.0",
     "@types/react-window": "^1.8.5",
-    "@typescript-eslint/eslint-plugin": "^4.31.1",
-    "@typescript-eslint/parser": "^4.31.1",
+    "@typescript-eslint/eslint-plugin": "^4.31.2",
+    "@typescript-eslint/parser": "^4.31.2",
     "cypress": "^8.4.1",
     "cypress-file-upload": "^5.0.8",
     "eslint": "^7.32.0",
@@ -84,7 +85,7 @@
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "3.4.1",
-    "eslint-plugin-react": "^7.25.2",
+    "eslint-plugin-react": "^7.26.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "node-sass": "^6.0.1",
     "prettier": "^2.4.1",
