--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -1,16 +1,15 @@
 name: Greetings
 
-on: [pull_request, issues]
+on: [pull_request]
 
 jobs:
   greeting:
     runs-on: ubuntu-latest
     permissions:
-      issues: write
       pull-requests: write
     steps:
-    - uses: actions/first-interaction@v1
-      with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Thanks so much for helping out, make sure to check out the CONTRIBUTING.md for guidelines!'
-        pr-message: 'Thanks so much for helping out, make sure to check out the CONTRIBUTING.md for guidelines!'
+      - uses: actions/first-interaction@v1
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          issue-message: 'Thanks so much for helping out, make sure to check out the CONTRIBUTING.md for guidelines!'
+          pr-message: 'Thanks so much for helping out, make sure to check out the CONTRIBUTING.md for guidelines!'
