--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "private": true,
   "dependencies": {
+    "@smogon/calc": "^0.6.0",
     "html-to-image": "^1.8.5",
     "immer": "^9.0.6",
     "react": "^17.0.2",
