--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@typescript-eslint/parser": "^4.32.0",
     "cypress": "^8.5.0",
     "cypress-file-upload": "^5.0.8",
+    "cypress-localstorage-commands": "^1.5.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
