Removed import react from react for new JSX transform

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,8 @@
   "plugins": ["react", "@typescript-eslint"],
   "ignorePatterns": ["cypress/*"],
   "rules": {
+    "react/jsx-uses-react": "off",
+    "react/react-in-jsx-scope": "off",
     "react/jsx-filename-extension": [
       1,
       {
@@ -68,8 +70,8 @@
         ],
         "pathGroupsExcludedImportTypes": ["internal"],
         "alphabetize": {
-          "order": "asc" /* sort in ascending order. Options: ['ignore', 'asc', 'desc'] */,
-          "caseInsensitive": true /* ignore case. Options: [true, false] */
+          "order": "asc",
+          "caseInsensitive": true
         }
       }
     ],
