--- a/package.json
+++ b/package.json
@@ -93,6 +93,6 @@
     "prettier": "^2.4.1",
     "sass-loader": "^12.1.0",
     "source-map-explorer": "^2.5.2",
-    "typescript": "4.0.8"
+    "typescript": "^4.4.3"
   }
 }
