--- a/package.json
+++ b/package.json
@@ -19,18 +19,18 @@
   "private": true,
   "dependencies": {
     "@smogon/calc": "^0.6.0",
-    "html-to-image": "^1.8.5",
+    "html-to-image": "^1.9.0",
     "immer": "^9.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.17.1",
+    "react-hook-form": "^7.17.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.3",
     "react-window": "^1.8.6",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
-    "zustand": "^3.5.12"
+    "zustand": "^3.5.13"
   },
   "scripts": {
     "analyze": "source-map-explorer ''build/static/js/*.js'",
@@ -66,33 +66,33 @@
     "@cypress/code-coverage": "^3.9.11",
     "@cypress/instrument-cra": "^1.4.0",
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.1.1",
-    "@testing-library/user-event": "^13.2.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.3.0",
     "@types/jest": "^27.0.2",
     "@types/lodash": "^4.14.175",
-    "@types/node": "^16.10.2",
-    "@types/react": "^17.0.26",
+    "@types/node": "^16.10.4",
+    "@types/react": "^17.0.29",
     "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.3.0",
+    "@types/react-router-dom": "^5.3.1",
     "@types/react-window": "^1.8.5",
-    "@typescript-eslint/eslint-plugin": "^4.32.0",
-    "@typescript-eslint/parser": "^4.32.0",
-    "cypress": "^8.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "cypress": "^8.6.0",
     "cypress-file-upload": "^5.0.8",
     "cypress-localstorage-commands": "^1.5.0",
-    "eslint": "^7.32.0",
+    "eslint": "7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "3.4.1",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "node-sass": "^6.0.1",
     "prettier": "^2.4.1",
-    "sass-loader": "^12.1.0",
+    "sass-loader": "^12.2.0",
     "source-map-explorer": "^2.5.2",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.4"
   }
 }
