--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,30 @@ jobs:
           if-no-files-found: error
           path: build
 
+  Jest:
+    timeout-minutes: 5
+    runs-on: ubuntu-latest
+    needs: install
+    strategy:
+      fail-fast: false
+      matrix:
+        containers: [1, 2, 3]
+    steps:
+      - name: 🛫 Checkout
+        uses: actions/checkout@v2
+
+      - name: 🏗 Download the build folders
+        uses: actions/download-artifact@v2
+        with:
+          name: build
+          path: build
+
+      - name: 🃏 Run Jest
+        run: yarn test --coverage
+
+      - name: ✅ Upload coverage to Codecov
+        uses: codecov/codecov-action@v2
+
   ui-chrome-tests:
     timeout-minutes: 15
     runs-on: ubuntu-latest
@@ -33,7 +57,7 @@ jobs:
       fail-fast: false
       matrix:
         # runs copies of the current job in parallel
-        containers: [1, 2]
+        containers: [1, 2, 3]
     steps:
       - name: 🛫 Checkout
         uses: actions/checkout@v2
@@ -73,7 +97,7 @@ jobs:
       fail-fast: false
       matrix:
         # run copies of the current job in parallel
-        containers: [1, 2]
+        containers: [1, 2, 3]
     steps:
       - name: 🛫 Checkout
         uses: actions/checkout@v2
