--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,6 @@ jobs:
   Jest:
     timeout-minutes: 5
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        containers: [1, 2, 3]
     steps:
       - name: 🛫 Checkout
         uses: actions/checkout@v2
@@ -39,7 +35,7 @@ jobs:
         run: yarn install
 
       - name: 🃏 Run Jest
-        run: yarn test --coverage
+        run: yarn test --ci --coverage
 
       - name: ✅ Upload coverage to Codecov
         uses: codecov/codecov-action@v2
