--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,7 +69,7 @@ jobs:
           browser: chrome
           record: true
           parallel: true
-          group: 'UI - Chrome'
+          group: 'UI - Chrome - Main'
           spec: 'cypress/integration/main/*'
         env:
           CYPRESS_PROJECT_ID: ${{ secrets.CYPRESS_PROJECT_ID }}
@@ -108,7 +108,7 @@ jobs:
           browser: chrome
           record: true
           parallel: true
-          group: 'UI - Chrome'
+          group: 'UI - Chrome - Other'
           spec: 'cypress/integration/other/*'
         env:
           CYPRESS_PROJECT_ID: ${{ secrets.CYPRESS_PROJECT_ID }}
@@ -149,7 +149,7 @@ jobs:
           browser: firefox
           record: true
           parallel: true
-          group: 'UI - Firefox'
+          group: 'UI - Firefox - Main'
           spec: 'cypress/integration/main/*'
         env:
           CYPRESS_PROJECT_ID: ${{ secrets.CYPRESS_PROJECT_ID }}
@@ -190,7 +190,7 @@ jobs:
           browser: firefox
           record: true
           parallel: true
-          group: 'UI - Firefox'
+          group: 'UI - Firefox - Other'
           spec: 'cypress/integration/other/*'
         env:
           CYPRESS_PROJECT_ID: ${{ secrets.CYPRESS_PROJECT_ID }}
