--- a/package.json
+++ b/package.json
@@ -25,15 +25,15 @@
   },
   "private": true,
   "dependencies": {
-    "@sentry/react": "^6.14.1",
-    "@sentry/tracing": "^6.14.1",
+    "@sentry/react": "^6.14.3",
+    "@sentry/tracing": "^6.14.3",
     "@smogon/calc": "^0.6.0",
     "html-to-image": "^1.9.0",
     "immer": "^9.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.19.1",
-    "react-router-dom": "^6.0.1",
+    "react-hook-form": "^7.19.5",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
     "react-window": "^1.8.6",
@@ -86,18 +86,18 @@
     "@types/react-window": "^1.8.5",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
-    "cypress": "^8.7.0",
+    "cypress": "^9.0.0",
     "cypress-file-upload": "^5.0.8",
-    "cypress-localstorage-commands": "^1.6.0",
+    "cypress-localstorage-commands": "^1.6.1",
     "eslint": "7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb": "18.2.1",
     "eslint-config-airbnb-typescript": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-react": "7.26.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "^2.4.1",
     "sass": "^1.43.4",
     "sass-loader": "^12.3.0",
