--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -65,6 +65,7 @@
           { "pattern": "common", "group": "internal" },
           { "pattern": "error/**", "group": "internal" },
           { "pattern": "hooks/**", "group": "internal" },
+          { "pattern": "locale/**", "group": "internal" },
           { "pattern": "routes/**", "group": "internal" },
           { "pattern": "selectors", "group": "internal" },
           { "pattern": "store", "group": "internal" },
