--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,11 @@
     "jsx": "react-jsx",
     "baseUrl": "./src"
   },
-  "include": ["src", "supabase.client.ts", "cypress"],
+  "include": ["src", "supabase.client.ts"],
   "exclude": [
     "node_modules",
+    "cypress",
+    "*.spec.ts",
     "src/constants/locations/*.ts",
     "src/constants/badges.ts",
     "src/constants/changelog.ts",
