Fixed some evo lines and routes in ORAS

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nuzlocke",
   "author": "Diego Ballesteros Castellanos",
   "description": "Nuzlocke tracker to record encounters with detailed information",
-  "version": "4.4.5",
+  "version": "4.4.6",
   "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/diballesteros/nuzlocke/issues"
@@ -28,9 +28,9 @@
     "@sentry/react": "^6.16.1",
     "@sentry/tracing": "^6.16.1",
     "@smogon/calc": "^0.6.0",
-    "@supabase/supabase-js": "^1.29.1",
+    "@supabase/supabase-js": "^1.29.3",
     "html-to-image": "^1.9.0",
-    "i18next": "^21.6.6",
+    "i18next": "^21.6.7",
     "immer": "^9.0.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -98,7 +98,7 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "7.26.1",
+    "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "^2.5.1",
     "sass": "^1.49.0",
