Adjustments to specs, updated to react 18, changelog updates, patchpackage for sentry, encounter fixes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,6 @@
     "react-app",
     "react-app/jest",
     "airbnb-typescript",
-    "airbnb/hooks",
     "plugin:@typescript-eslint/recommended",
     "prettier",
     "plugin:prettier/recommended"
@@ -87,6 +86,7 @@
     "no-debugger": [0, {}],
     "react/prop-types": 0,
     "react/require-default-props": 0,
+    "@typescript-eslint/ban-ts-comment": [0, {}],
     "@typescript-eslint/ban-types": [0, {}],
     "@typescript-eslint/comma-dangle": [
       "error",
