fix: Adjusted cinnabar island encounters and color of the pokemon selector button

--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -4,5 +4,5 @@
     "lib": ["es5", "dom"],
     "types": ["cypress", "cypress-file-upload", "node", "cypress-localstorage-commands"]
   },
-  "include": ["**/*.ts"]
+  "include": ["**/*"]
 }
