--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,8 +1,13 @@
 {
+  "extends": "../tsconfig.json",
+  "include": ["./**/*.ts"],
+  "exclude": [],
   "compilerOptions": {
     "target": "es5",
+    "allowJs": true,
+    "noEmit": true,
     "lib": ["es5", "dom"],
+    "isolatedModules": false,
     "types": ["cypress", "cypress-file-upload", "node", "cypress-localstorage-commands"]
-  },
-  "include": ["**/*"]
+  }
 }
