fix: updated encounters for rby and frlg, updated dependencies

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nuzlocke",
   "author": "Diego Ballesteros Castellanos",
   "description": "Nuzlocke tracker to record encounters with detailed information",
-  "version": "5.4.4",
+  "version": "5.4.5",
   "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/diballesteros/nuzlocke/issues"
@@ -27,17 +27,17 @@
   },
   "private": true,
   "dependencies": {
-    "@sentry/react": "^7.53.1",
-    "@sentry/tracing": "^7.53.1",
+    "@sentry/react": "^7.57.0",
+    "@sentry/tracing": "^7.57.0",
     "@smogon/calc": "^0.7.0",
     "@supabase/supabase-js": "^1.35.7",
     "html-to-image": "^1.11.11",
-    "i18next": "^22.5.0",
+    "i18next": "^23.2.6",
     "immer": "^10.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^12.3.1",
-    "react-router-dom": "^6.11.2",
+    "react-i18next": "^13.0.1",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "react-window": "^1.8.9",
@@ -48,7 +48,7 @@
   },
   "scripts": {
     "analyze": "source-map-explorer ''build/static/js/*.js'",
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "httpss": "HTTPS=true react-scripts start",
     "develop:ci": "CHOKIDAR_USEPOLLING=1 react-scripts -r @cypress/instrument-cra start --config-file=cypress.config.ts",
     "build": "react-scripts build",
@@ -77,21 +77,21 @@
     ]
   },
   "devDependencies": {
-    "@cypress/code-coverage": "^3.10.6",
+    "@cypress/code-coverage": "^3.10.8",
     "@cypress/instrument-cra": "^1.4.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.5.1",
+    "@types/jest": "^29.5.2",
     "@types/lodash": "^4.14.195",
-    "@types/node": "^20.2.5",
-    "@types/react": "^18.2.7",
-    "@types/react-dom": "^18.2.4",
+    "@types/node": "^20.3.3",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-window": "^1.8.5",
     "@typescript-eslint/eslint-plugin": "5.7.0",
     "@typescript-eslint/parser": "5.7.0",
-    "cypress": "^12.13.0",
+    "cypress": "^12.16.0",
     "cypress-file-upload": "^5.0.8",
     "cypress-localstorage-commands": "^2.2.3",
     "eslint": "8.4.1",
@@ -104,8 +104,8 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.8.8",
-    "sass": "^1.62.1",
-    "sass-loader": "^13.3.1",
+    "sass": "^1.63.6",
+    "sass-loader": "^13.3.2",
     "source-map-explorer": "^2.5.3"
   }
 }
