feat: updated depdencies and encounter adjustments, changes to remove deprecated features

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
     "react-app/jest",
     "airbnb-typescript",
     "plugin:@typescript-eslint/recommended",
+    "plugin:deprecation/recommended",
     "prettier",
     "plugin:prettier/recommended"
   ],
