--- a/package.json
+++ b/package.json
@@ -27,24 +27,24 @@
   },
   "private": true,
   "dependencies": {
-    "@sentry/react": "^7.57.0",
-    "@sentry/tracing": "^7.57.0",
-    "@smogon/calc": "^0.7.0",
+    "@sentry/browser": "^7.109.0",
+    "@sentry/react": "^7.109.0",
+    "@smogon/calc": "^0.9.0",
     "@supabase/supabase-js": "^1.35.7",
     "html-to-image": "^1.11.11",
     "i18next": "22.4.15",
-    "immer": "^10.0.2",
+    "immer": "^10.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "12.2.2",
-    "react-router-dom": "^6.14.1",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
-    "react-window": "^1.8.9",
+    "react-window": "^1.8.10",
     "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^2.1.4",
+    "semantic-ui-react": "^2.1.5",
     "typescript": "4.5.5",
-    "zustand": "^4.3.8"
+    "zustand": "^4.5.2"
   },
   "scripts": {
     "analyze": "source-map-explorer ''build/static/js/*.js'",
@@ -77,27 +77,28 @@
     ]
   },
   "devDependencies": {
-    "@cypress/code-coverage": "^3.10.8",
+    "@cypress/code-coverage": "^3.12.33",
     "@cypress/instrument-cra": "^1.4.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.5.2",
-    "@types/lodash": "^4.14.195",
-    "@types/node": "^20.3.3",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
+    "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.0",
+    "@types/node": "^20.12.5",
+    "@types/react": "^18.2.74",
+    "@types/react-dom": "^18.2.24",
     "@types/react-router-dom": "^5.3.3",
-    "@types/react-window": "^1.8.5",
+    "@types/react-window": "^1.8.8",
     "@typescript-eslint/eslint-plugin": "5.7.0",
     "@typescript-eslint/parser": "5.7.0",
-    "cypress": "^12.16.0",
+    "cypress": "^13.7.2",
     "cypress-file-upload": "^5.0.8",
-    "cypress-localstorage-commands": "^2.2.3",
+    "cypress-localstorage-commands": "^2.2.5",
     "eslint": "8.4.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^16.1.2",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-deprecation": "^2.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
